add properties to package.json

--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "description": "A simple react component that show a modal",
   "main": "dist/index.js",
   "module": "dist/index.es.js",
+  "keywords": [
+    "React",
+    "Modal"
+  ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "storybook": "start-storybook -p 6006",
@@ -12,6 +16,10 @@
   },
   "author": "Sebastien Kollmann",
   "license": "MIT",
+  "repository": {
+		"type": "git",
+		"url": "https://github.com/Kollmann7/Modal-sk-01"
+  },  
   "type": "commonjs",
   "devDependencies": {
     "@babel/core": "^7.20.2",
